<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/schedule_selection_pin"
        android:icon="@drawable/ic_oui_pin_outline"
        android:title="@string/schedule_pin"
        app:showAsAction="always" />
    <item
        android:id="@+id/schedule_selection_duplicate"
        android:icon="@drawable/ic_oui_copy_outline"
        android:title="@string/schedule_duplicate"
        app:showAsAction="always" />
    <item
        android:id="@+id/schedule_selection_delete"
        android:icon="@drawable/ic_oui_delete_outline"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/schedule_selection_more"
        android:icon="@drawable/ic_oui_more"
        android:title="@string/schedule_more"
        app:showAsAction="always" />
</menu>
