<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget_config_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneui_bg"
    app:expandable="false"
    app:expanded="false"
    app:handleInsets="false"
    app:showNavButtonAsBack="true"
    app:title="@string/widget_settings">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_location="main_content">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/widget_settings_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="96dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tjg.twidget.widget.WallpaperPreviewLayout
                android:id="@+id/preview_container"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:layout_marginTop="20dp">

                <FrameLayout
                    android:id="@+id/preview_widget"
                    android:layout_width="162dp"
                    android:layout_height="176dp"
                    android:layout_gravity="center"
                    android:padding="10dp" />
            </com.tjg.twidget.widget.WallpaperPreviewLayout>

            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/account_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:id="@+id/account_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical" />

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_appearance_section" />

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/widget_style_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="false"
                    app:title="@string/widget_style" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?android:colorBackground"
                android:orientation="vertical">

                <include layout="@layout/widget_opacity_control" />

                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/font_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="true"
                    app:summary="@string/widget_font_one_ui"
                    app:title="@string/widget_font" />

                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/language_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="true"
                    app:summary="@string/widget_language_default"
                    app:title="@string/widget_language" />

                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/tint_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showTopDivider="true"
                    app:summary="@string/widget_tint_system"
                    app:title="@string/widget_tint" />


                <dev.oneuiproject.oneui.widget.CardItemView
                    android:id="@+id/logo_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableEnd="@drawable/ic_logo_x"
                    app:showTopDivider="true"
                    app:summary="@string/widget_logo_x"
                    app:title="@string/widget_logo_style" />

                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/delta_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:separateSwitch="false"
                    app:showTopDivider="true"
                    app:title="@string/widget_show_delta" />

                <dev.oneuiproject.oneui.widget.SwitchItemView
                    android:id="@+id/contained_footer_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:separateSwitch="false"
                    app:showTopDivider="true"
                    app:title="@string/widget_contained_footer" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

            <TextView
                android:id="@+id/contained_footer_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/widget_settings_content_inset"
                android:paddingEnd="@dimen/widget_settings_content_inset"
                android:paddingTop="10dp"
                android:text="@string/widget_contained_footer_summary"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <dev.oneuiproject.oneui.widget.Separator
                android:id="@+id/tap_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_tap_action" />

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:id="@+id/tap_action_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.RadioItemViewGroup
                    android:id="@+id/tap_action_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <dev.oneuiproject.oneui.widget.RadioItemView
                        android:id="@+id/tap_refresh_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/tap_refresh" />

                    <dev.oneuiproject.oneui.widget.RadioItemView
                        android:id="@+id/tap_profile_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showTopDivider="true"
                        app:title="@string/tap_profile" />

                    <dev.oneuiproject.oneui.widget.RadioItemView
                        android:id="@+id/tap_app_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showTopDivider="true"
                        app:title="@string/tap_twidget" />
                </dev.oneuiproject.oneui.widget.RadioItemViewGroup>
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/config_button_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/config_button_bar_bg"
            android:clipToOutline="true"
            android:elevation="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sec"
                android:paddingHorizontal="36dp"
                android:paddingVertical="16dp"
                android:text="@string/cancel"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/oneui_divider" />

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sec"
                android:paddingHorizontal="36dp"
                android:paddingVertical="16dp"
                android:text="@string/save"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</dev.oneuiproject.oneui.layout.ToolbarLayout>
