<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/menu_add_widget"
        android:icon="@drawable/ic_oui_add"
        android:title="@string/add_widget_to_home"
        app:iconTint="?actionMenuTextColor"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_card"
        android:icon="@drawable/ic_oui_add"
        android:title="@string/add_card"
        app:iconTint="?actionMenuTextColor"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_done_editing"
        android:icon="@drawable/ic_oui_close"
        android:title="@string/done"
        app:iconTint="?actionMenuTextColor"
        app:showAsAction="always" />
</menu>
